<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="btntxt_search">Поиск</string>
    <string name="program_name">Playlist maker</string>
    <string name="btntxt_mediatec">Медиатека</string>
    <string name="btntxt_settings">Настройки</string>
    <string name="bigbtn_font_family">sans-serif</string>
    <string name="txt_black_theme">Темная тема</string>
    <string name="txt_share_app">Поделиться приложением</string>
    <string name="txt_write_support">Написать в поддержку</string>
    <string name="txt_user_agreement">Пользовательское соглашение</string>
    <string name="btntxt_back">назад</string>
    <string name="thanks_template_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="switch_to_dark_theme">Переключение на Темную тему</string>
    <string name="thanks_template_subj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="MAIL_TO" translatable="false">mailto:</string>
    <string name="DEFAULT_EMAIL" translatable="false">yariyan@yandex.ru</string>
    <string name="YP_LINK_AD" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="YP_LINK_OFFER" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="TEXT_PLAIN" translatable="false">text/plain</string>
    <string name="error_track_list_is_empty">Ничего не нашлось</string>
    <string name="error_network_trouble">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_button_text">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="wrong_context">Передан неподходящий контекст</string>
    <string name="error_prepairing_media_player">Не удалось подготовить проигрыватель</string>
    <string name="error_empty_url">Для этого трека отсутствует предварительное прослушивание</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали ни одного плейлиста\n</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="hint_playlistname">Название*</string>
    <string name="hint_playlistdesc">Описание</string>
    <string name="createPlaylist">Создать</string>
    <string name="need_fill">Необходимо заполнить!</string>
    <string name="complete">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="q_ending_create_playlist_title">Завершить создание плейлиста?</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="q_message_confirm_exit_without_create_playlist">Все несохраненные данные будут потеряны</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="track_alerady_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="track_added_in_playlist">Добавлено в плейлист</string>
    <string name="delete">Удалить</string>
    <string name="q_delete_track_from_playlist">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="no_one_track_in_playlist_for_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="q_delete_playlist">Хотите удалить плейлист</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="save">Сохранить</string>
    <string name="edited">отредактирован</string>
    <string name="delete_track">Удалить трек</string>
    <string name="no_one_track_in_playlist">В плейлист ещё не добавлен ни один трек</string>
</resources>