<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.settings.fragment.SettingsFragment">

    <Toolbar
        android:layout_width="match_parent"
        style="@style/toolbarTitle"
        android:layout_height="@dimen/default_toolbar_height"
        android:title="@string/btntxt_settings" />

    <LinearLayout
        style="@style/llMainContentListStyle"
        android:paddingTop="24dp"
        >

        <LinearLayout

            style="@style/SettingsListStyleLL">

            <TextView
                style="@style/tvSettingsTextStyle"
                android:text="@string/txt_black_theme"

                />

            <Switch
                android:id="@+id/swBlackTheme"
                style="@style/ivSettingsImgButtonStyle"
                android:checked="true"
                android:rotation="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llShare"
            style="@style/SettingsListStyleLL"
            android:clickable="true">

            <TextView
                style="@style/tvSettingsTextStyle"
                android:paddingEnd="8dp"
                android:text="@string/txt_share_app" />

            <ImageView
                style="@style/ivSettingsImgButtonStyle"
                app:srcCompat="@drawable/ic_share" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSupport"
            android:clickable="true"
            style="@style/SettingsListStyleLL">

            <TextView
                style="@style/tvSettingsTextStyle"
                android:text="@string/txt_write_support"/>

            <ImageView

                style="@style/ivSettingsImgButtonStyle"

                android:layout_height="23dp"
                app:srcCompat="@drawable/ic_support" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTerms"
            android:clickable="true"
            style="@style/SettingsListStyleLL">

            <TextView
                style="@style/tvSettingsTextStyle"
                android:text="@string/txt_user_agreement"
                />

            <ImageView

                style="@style/ivSettingsImgButtonStyle"
                app:srcCompat="@drawable/ic_arrow_forward" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>