<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSecondary"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingTop="10dp"
        android:paddingStart="@dimen/default_padding_title"
        android:paddingBottom="@dimen/default_padding_title">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/program_name"
            android:textSize="@dimen/program_name_text_size"
            android:textColor="@color/white_pm"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingTop="@dimen/default_padding_title"
        android:paddingStart="@dimen/bigbtn_default_padding"
        android:paddingEnd="@dimen/bigbtn_default_padding"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/btn_search"
            style="@style/MainButtonStyle"
            android:text="@string/btntxt_search"
            app:icon="@drawable/ic_search"
             />

        <Button
            android:id="@+id/btn_mediatec"
            style="@style/MainButtonStyle"
            android:text="@string/btntxt_mediatec"
            app:icon="@drawable/ic_library"
            />

        <Button
            android:id="@+id/btn_settings"
            style="@style/MainButtonStyle"
            android:text="@string/btntxt_settings"
            app:icon="@drawable/ic_settings"
            />

    </LinearLayout>

</LinearLayout>