<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white_pm"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imgBtnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:contentDescription="@string/btntxt_back"
            app:srcCompat="@drawable/ic_arrow_back"
            app:iconTint="@color/black_pm"
            app:iconSize="@dimen/icon_size"
            app:backgroundTint="@color/white_pm"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="1dp"
            android:text="@string/btntxt_settings"
            android:textSize="@dimen/bigbtn_text_size"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="12dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="@dimen/padding_19dp"
            android:paddingLeft="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_18dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/txt_black_theme"
                android:textColor="@color/black_pm"
                android:textSize="@dimen/settings_item_text_size"
                />

            <Switch
                android:id="@+id/swBlackTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:rotation="0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="@dimen/padding_19dp"
            android:paddingLeft="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/txt_share_app"
                android:textColor="@color/black_pm"
                android:textSize="@dimen/settings_item_text_size"/>

            <ImageView
                android:id="@+id/imgViewShare"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="1"
                app:tint = "@color/gray_pm"
                app:srcCompat="@drawable/ic_share" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="@dimen/padding_19dp"
            android:paddingBottom="@dimen/padding_18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/txt_write_support"
                android:textColor="@color/black_pm"
                android:textSize="@dimen/settings_item_text_size"/>

            <ImageView
                android:id="@+id/imgViewSupport"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="1"
                app:tint = "@color/gray_pm"
                app:srcCompat="@drawable/ic_support" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="@dimen/padding_19dp"
            android:paddingBottom="@dimen/padding_18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/txt_user_agreement"
                android:textColor="@color/black_pm"
                android:textSize="@dimen/settings_item_text_size"/>

            <ImageView
                android:id="@+id/imgViewTerms"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="1"
                app:tint = "@color/gray_pm"
                app:srcCompat="@drawable/ic_arrow_forward" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>