<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:orientation="vertical"
    tools:context=".ui.search.fragment.SearchFragment">

    <Toolbar
        android:layout_width="match_parent"
        style="@style/toolbarTitle"
        android:layout_height="@dimen/default_toolbar_height"
        android:title="@string/btntxt_search" />

    <LinearLayout
        android:id="@+id/mainLL"
        style="@style/MainContentListStyle">


        <FrameLayout
            android:id="@+id/llShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/vTextSearch"
                style="@style/EditTextMainStyleDayNight"
                android:hint="@string/btntxt_search"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_edit_text"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/btnSearchClear"
                style="@style/EditTextMainStyleDayNight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:clickable="true"
                android:paddingEnd="10dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_close" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progressBarSearchTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/blue_pm"
            android:paddingTop="55dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:itemCount="5"
            tools:listitem="@layout/track_element"></androidx.recyclerview.widget.RecyclerView>

        <include
            android:id="@+id/placeholderTrouble"
            layout="@layout/placeholder_empty_error" />

        <LinearLayout
            android:id="@+id/linearTracksHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="32dp"
                android:paddingBottom="12dp"
                android:text="@string/search_history_title"
                android:textSize="@dimen/default_text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTracksHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                tools:itemCount="20"
                tools:listitem="@layout/track_element"></androidx.recyclerview.widget.RecyclerView>


            <Button
                android:id="@+id/clearHistoryButton"
                style="@style/TrackListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/clear_button_text">

            </Button>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>